# cpm-onnxruntime

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: sync.yml
example/: CMakeLists.txt  README.md  main.cpp
